# lnk-forensic

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  fuzz.yml
core/: Cargo.toml  README.md
core/examples/: gen_jumplist.rs
core/src/: jumplist.rs  lib.rs  tests.rs
docs/: index.md  privacy.md  terms.md
forensic/: Cargo.toml  README.md
forensic/src/: lib.rs  tests.rs
forensic/tests/: jumplist.rs  real_data.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: forensic.rs  jumplist.rs  shelllink.rs
privacy/: index.html
search/: search_index.json
terms/: index.html
tests/data/: README.md  gen_jumplist.rs  gen_lnk.rs  network_share.lnk  pinned_removable.automaticDestinations-ms  tasks.customDestinations-ms
