[package]
name = "lnk-forensic-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lnk-core = { path = "../core" }
lnk-forensic = { path = "../forensic" }

[[bin]]
name = "shelllink"
path = "fuzz_targets/shelllink.rs"
test = false
doc = false

[[bin]]
name = "forensic"
path = "fuzz_targets/forensic.rs"
test = false
doc = false

[[bin]]
name = "jumplist"
path = "fuzz_targets/jumplist.rs"
test = false
doc = false

[workspace]
